// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the navigation authed 1`] = `
<div>
  <BrowserRouter>
    <div>
      <WithStyles(ForwardRef(Paper))>
        <withRouter(NavigationBar)
          routesList={
            Array [
              Object {
                "authRequired": false,
                "component": [Function],
                "exact": true,
                "name": "Sign Up",
                "path": "/signup",
              },
              Object {
                "authRequired": false,
                "component": [Function],
                "exact": true,
                "name": "Log In",
                "path": "/login",
              },
              Object {
                "authRequired": true,
                "component": [Function],
                "exact": true,
                "name": "Dashboard",
                "path": "/dashboard",
              },
            ]
          }
        />
        <button
          id="signOut"
          onClick={[Function]}
        >
          Log Out
        </button>
      </WithStyles(ForwardRef(Paper))>
    </div>
    <div>
      <Route
        component={[Function]}
        exact={true}
        key="0"
        path="/signup"
      />
      <Route
        component={[Function]}
        exact={true}
        key="1"
        path="/login"
      />
      <Route
        component={[Function]}
        exact={true}
        key="2"
        path="/dashboard"
      />
      <Route
        component={[Function]}
        exact={true}
        key="3"
        path="/email"
      />
    </div>
  </BrowserRouter>
</div>
`;

exports[`Render the navigation unauthed 1`] = `
<div>
  <BrowserRouter>
    <div>
      <WithStyles(ForwardRef(Paper))>
        <withRouter(NavigationBar)
          routesList={
            Array [
              Object {
                "authRequired": false,
                "component": [Function],
                "exact": true,
                "name": "Sign Up",
                "path": "/signup",
              },
              Object {
                "authRequired": false,
                "component": [Function],
                "exact": true,
                "name": "Log In",
                "path": "/login",
              },
            ]
          }
        />
      </WithStyles(ForwardRef(Paper))>
    </div>
    <div>
      <Route
        component={[Function]}
        exact={true}
        key="0"
        path="/signup"
      />
      <Route
        component={[Function]}
        exact={true}
        key="1"
        path="/login"
      />
      <Route
        component={[Function]}
        exact={true}
        key="2"
        path="/dashboard"
      />
      <Route
        component={[Function]}
        exact={true}
        key="3"
        path="/email"
      />
    </div>
  </BrowserRouter>
</div>
`;
